--- a/contact.html
+++ b/contact.html
@@ -113,11 +113,10 @@
                 </h1>
                 <hr>
                 <p class="visible-xs">
-                    欲購買產品或有任何疑問，
-                    我們可以立即為您服務
+                   如需購買產品或有任何疑問，我們可以立即為您服務
                 </p>
                 <p class="hidden-xs">
-                    欲購買產品或有任何疑問，
+                    如需購買產品或有任何疑問，
                 </p>
                 <p class="hidden-xs">
                     我們可以立即為您服務
