--- a/product_bachua.html
+++ b/product_bachua.html
@@ -194,7 +194,7 @@
                         八爪DIY手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/i01Bj_24H1o">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=i01Bj_24H1o&index=6&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-">
                             <img src="images/product-4/video/bachua_film01.jpg" alt="">
                         </a>
                         <div>
