--- a/product_dingtsu.html
+++ b/product_dingtsu.html
@@ -197,7 +197,7 @@
                         鼎足DIY手法 
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/VR6U54fFReQ">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=VR6U54fFReQ&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-&index=8">
                             <img src="images/product-7/video/dingtsu_film01.jpg" alt="">
                         </a>
                         <div>
