--- a/product_dousao.html
+++ b/product_dousao.html
@@ -194,7 +194,7 @@
                         斗杓DIY手法 
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/ZfVkkW4jbEM">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=ZfVkkW4jbEM&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-&index=7">
                             <img src="images/product-6/video/dousao_film01.jpg" alt="">
                         </a>
                         <div>
