--- a/product_largefish.html
+++ b/product_largefish.html
@@ -185,7 +185,7 @@
                         橫撥和兩短一長手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/O_WptIi3CaY">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=O_WptIi3CaY&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-&index=1">
                             <img src="images/product-1/video/smallfish_film01.jpg" alt="">
                         </a>
                         <div>
@@ -198,7 +198,7 @@
                         頭部按摩手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/h7W1HKk8eJ0">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=h7W1HKk8eJ0&index=2&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-">
                             <img src="images/product-1/video/smallfish_film02.jpg" alt="">
                         </a>
                         <div>
@@ -211,7 +211,7 @@
                         臉部按摩手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wlaBRNe1bGs">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=wlaBRNe1bGs&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-&index=4">
                             <img src="images/product-1/video/smallfish_film03.jpg" alt="">
                         </a>
                         <div>
@@ -224,7 +224,7 @@
                         眼部按摩手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/RFDGVFiK_Zo">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=RFDGVFiK_Zo&index=3&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-">
                             <img src="images/product-1/video/smallfish_film04.jpg" alt="">
                         </a>
                         <div>
@@ -237,7 +237,7 @@
                         手部按摩手法
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/wTkAG90R2IM">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=wTkAG90R2IM&index=5&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-">
                             <img src="images/product-1/video/smallfish_film05.jpg" alt="">
                         </a>
                         <div>
