--- a/product_necklace.html
+++ b/product_necklace.html
@@ -200,7 +200,7 @@
                         遠紅外線能量珠鍊功能介紹 
                     </h1>
                     <div class="video-img">
-                        <a target="_blank" href="https://youtu.be/rh2RCN0pwJE">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=rh2RCN0pwJE&index=9&list=PLjQEOkLCNErxAFFMuJiMpDCups3rk7TT-">
                             <img src="images/product-8/video/accessory_film.jpg" alt="">
                         </a>
                         <div>
