--- a/product_smallfish.html
+++ b/product_smallfish.html
@@ -129,13 +129,13 @@
                     </h1>
                     <ul>
                         <li>
-                            精緻的功能設定可針對經絡密集分布的區塊一一細緻疏導，
+                            精緻的功能設定可針對經絡密集分布的區塊一一細緻疏導。
                         </li>
                         <li>
                             尤其對於頭部、臉部、肩頸部、手腕、手掌與手指的經絡疏通有良好效果。
                         </li>
                         <li>
-                            尺寸小巧方便，適合外出時隨身攜帶使用
+                            尺寸小巧方便，適合外出時隨身攜帶使用。
                         </li>
                     </ul>
                     <table>
@@ -165,7 +165,7 @@
                         </tr>
                     </table>
                     <p class="info">
-                        ※欲訂購產品或瞭解更多資訊，請立即與<a target="_blank" href="contact.html">我們聯繫</a>
+                        ※如需訂購產品或瞭解更多資訊，請立即與<a target="_blank" href="contact.html">我們聯繫</a>
                     </p>
                 </div>
                 <div class="img-box">
