--- a/product_classicbracelet.html
+++ b/product_classicbracelet.html
@@ -162,7 +162,7 @@
                         </tr>
                     </table>
                     <p class="info">
-                        ※欲訂購產品或瞭解更多資訊，請立即與<a target="_blank" href="contact.html">我們聯繫</a>
+                        ※如需訂購產品或瞭解更多資訊，請立即與<a target="_blank" href="contact.html">我們聯繫</a>
                     </p>
                 </div>
                 <div class="img-box">
