--- a/product_sliverbracelet.html
+++ b/product_sliverbracelet.html
@@ -172,6 +172,13 @@
                     <div class="main-img">
                         <img src="images/product-9/productofsliverbracelet01.jpg" alt="">
                     </div>
+                    <div class="visible-xs pre-btn">
+                        <i class="fa fa-angle-left"></i>
+                    </div>
+
+                    <div class="visible-xs next-btn">
+                        <i class="fa fa-angle-right"></i>
+                    </div>
                     <ul>
                         <li>
                             <img src="images/product-9/productofsliverbracelet01.jpg" alt="">
